--- a/Skills.html
+++ b/Skills.html
@@ -151,8 +151,11 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <div class="col-6">
+              <a class="btn btn-dark block button w-100" href="https://github.com/Taucia/calculator" target="_blank">Github</a>
+              <hr>
+              <a class="btn btn-dark block button w-100" href="https://famous-treacle-f2887c.netlify.app" target="_blank">Netifly</a>
+          </div>
           </div>
         </div>
       </div>
@@ -181,8 +184,12 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <div class="col-6">
+              <!-- <button class="btn-dark block button w-100">Github</button> -->
+              <a class="btn btn-dark block button w-100" href="https://github.com/Taucia/rainbow" target="_blank">Github</a>
+              <hr>
+              <a class="btn btn-dark block button w-100" href="https://melodic-elf-4eb6ce.netlify.app" target="_blank">Netifly</a>
+          </div>
           </div>
         </div>
       </div>
@@ -208,7 +215,11 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"
               class="circle"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"
-              class="circle"></button>
+              class="circle"></button> <div class="col-6">
+                <a class="btn btn-dark block button w-100" href="https://www.linkedin.com/in/taucia-jackson-a17a29205/" target="-blank">linkin</a>
+    
+            </div>
+          
           </div>
           <div class="carousel-inner pb-5">
             <div class="carousel-item active ">
@@ -229,8 +240,8 @@
                 Nostrum ullam natus labore fugiat odio.</p>
             </div>
             <div class=" carousel-item ">
-              <img src="https://i.postimg.cc/ryxJMdJR/Ridhaa-1.jpg" class="rounded-circle rounded-image  " 
-               style="top:0.3%; left:80%" alt="image">
+              <img src="images/Ridhaa edited.png" class="rounded-circle rounded-image  " 
+                alt="image">
               <h2>
                 Ridhaa Benjamin </h2>
               <p>
@@ -250,9 +261,9 @@
 
             </div>
             <div class=" carousel-item ">
-              <img src="https://i.postimg.cc/vH8jtFnW/Micheala-1.jpg" class="rounded-circle rounded-image" alt="image">
+              <img src="images/Saleem edited.png" class="rounded-circle rounded-image" alt="image">
               <h2>
-                michaela ward </h2>
+                saleem ariefdien </h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, perferendis. Quaerat modi
                 aliquid suscipit sit quos sed quisquam vero sequi expedita id. Nostrum, suscipit dolorem
